# Segmagic

./: .gitignore  LOSS_DOCUMENTATION.md  README.md  dataloader_ml.py  dataset_ml.py  default.toml  example.toml  inference.py  model_ml.py  normalize.py  pyproject.toml  segmagic_ml.py  settings.py  settings_example.py  train-ml.ipynb  train.py  xenium.toml
model/: __init__.py  deep_supervision_unet.py  losses.py  optimizers.py  single_channel_model.py  sophia.py
model/blocks/: heads.py
model/blocks/decoders/segformer/: decoder.py  model.py
model/blocks/decoders/unet/: decoder.py  model.py
